adding Person routes to Swagger
